--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "emoji-picker-element": "^1.28.0",
     "emoji-picker-react": "^4.16.1",
+    "hls.js": "^1.6.15",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
